--- a/src/templates/components/contextual-toolbar.html
+++ b/src/templates/components/contextual-toolbar.html
@@ -11,4 +11,5 @@
     <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="alinea">A<span class="shortcut">l</span>ínea</button>
     <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="item">It<span class="shortcut">e</span>m</button>
   </div>
+  <span class="arrow js-contextualToolbarArrow"></span>
 </div>
