change minimap when user click in metrics button

--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -203,6 +203,7 @@
 <script src="{% static 'js/components/pageMinimap/view.js' %}"></script>
 <script src="{% static 'js/components/opinionsMetrics/view.js' %}"></script>
 <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
+<script src="{% static 'js/components/documentOpinionsBody/view.js' %}"></script>
 <script src="{% static 'js/pages/opinionsDocument.js' %}"></script>
 {% endif %}
 {% endblock page_js %}
