--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -1,16 +1,16 @@
 {% load staticfiles projects_tags participations_tags dashboard_tags %}
 
 <article id="article" class="-analysis js-articleDocument" data-group-id={{group.id}}>
-  <ul class="tags">
-    <li class="app-tag -button -active -public">
+  <ul class="tags js-metricsButtons">
+    <li class="app-tag -button -active -public js-participantsButton">
       <i class="icon" alt="Participantes"></i>
       <span class="label">{{participation_count}} Participantes</span>
     </li>
-    <li class="app-tag -button -opinions">
+    <li class="app-tag -button -opinions js-opinionsButton">
       <i class="icon" alt="Opiniões"></i>
       <span class="label">{{group.suggestions.count}} Opiniões</span>
     </li>
-    <li class="app-tag -button -votes">
+    <li class="app-tag -button -votes js-votesButton">
       <i class="icon" alt="Votos"></i>
       <span class="label">{{group|group_votes}} Votos</span>
     </li>
@@ -46,24 +46,27 @@
       {% else %}
       <p class="excerpt-wrapper -analysis {% excerpt_classes excerpt %} js-excerptWrapper">
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
+        {% get_percent excerpt|excerpt_participants:group participation_count as relevance_participations %}
+        {% get_percent excerpt|excerpt_opinions:group group.suggestions.count as relevance_opinions %}
+        {% get_percent excerpt|excerpt_votes:group group|group_votes as relevance_votes %}
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
         <span class="metrics">
-          <span class="item -participants" aria-label="{% get_percent excerpt|excerpt_participants:group participation_count %}% de Participantes">
+          <span class="item -participants" aria-label="{{ relevance_participations }}% de Participantes">
             <span class="value">{{excerpt|excerpt_participants:group}}</span>
             <span class="bar">
-              <span class="size" style="width: {% get_percent excerpt|excerpt_participants:group participation_count %}%;"></span>
+              <span class="size" style="width: {{ relevance_participations }}%;"></span>
             </span>
           </span>
-          <span class="item -opinions" aria-label="{% get_percent excerpt|excerpt_opinions:group group.suggestions.count %}% de Opiniões">
+          <span class="item -opinions" aria-label="{{ relevance_opinions }}% de Opiniões">
             <span class="value">{{excerpt|excerpt_opinions:group}}</span>
             <span class="bar">
-              <span class="size" style="width: {% get_percent excerpt|excerpt_opinions:group group.suggestions.count %}%;"></span>
+              <span class="size" style="width: {{ relevance_opinions }}%;"></span>
             </span>
           </span>
-          <span class="item -votes" aria-label="{% get_percent excerpt|excerpt_votes:group group|group_votes %}% de Votos">
+          <span class="item -votes" aria-label="{{ relevance_votes }}% de Votos">
             <span class="value">{{excerpt|excerpt_votes:group}}</span>
             <span class="bar">
-              <span class="size" style="width: {% get_percent excerpt|excerpt_votes:group group|group_votes %}%;"></span>
+              <span class="size" style="width: {{ relevance_votes }}%;"></span>
             </span>
           </span>
         </span>
