--- a/src/templates/components/filter-modal.html
+++ b/src/templates/components/filter-modal.html
@@ -14,8 +14,10 @@
         <input class="js-input" type="text" name="theme-autocomplete">
         <label>{% trans "Tema" %}</label>
         <div class="themes">
-          <span class="title _hidden js-title">Temas:</span>
-          <ul class="tags js-tags"></ul>
+          <div class="wrapper _hidden">
+            <span class="title js-title">Temas Adicionados:</span>
+            <ul class="tags js-tags"></ul>
+          </div>
         </div>
       </div>
     </div>
