--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -167,6 +167,7 @@
 <script src="{% static 'jquery-ui-dist/jquery-ui.min.js' %}"></script>
 <script src="{% static 'air-datepicker/dist/js/datepicker.min.js' %}"></script>
 <script src="{% static 'air-datepicker/dist/js/i18n/datepicker.pt-BR.js' %}"></script>
+<script src="{% static 'slug/slug.js' %}"></script>
 <script src="{% static 'js/components/datePicker/view.js' %}"></script>
 <script src="{% static 'js/components/openParticipation/view.js' %}"></script>
 <script src="{% static 'js/components/filterModal/view.js' %}"></script>
