--- a/src/templates/pages/new-document.html
+++ b/src/templates/pages/new-document.html
@@ -75,6 +75,7 @@
 
 {% block page_js %}
   <script src="{% static 'jquery-ui-dist/jquery-ui.min.js' %}"></script>
+  <script src="{% static 'slug/slug.js' %}"></script>
   <script src="{% static 'js/components/themeAutocomplete/view.js' %}"></script>
   <script src="{% static 'js/pages/newDocument.js' %}"></script>
 {% endblock page_js %}
