Feature/add more metrics (#170)
* Add more metrics

* add template tag to count opinions

* Create buttons styles for metrics

* Fix z index

* Improve info bar

* Fix toolbar z index

* change minimap when user click in metrics button

* fix js classes

* toggle icons

* fix import

* fix jquery element

* Fix theme autocomplete

--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -50,7 +50,6 @@
   }
 }
 
-
 .tip {
   position: sticky;
   top: 50%;
@@ -158,11 +157,20 @@
   }
 
 
-  & > article > header .tags {
+  & > article > .tags {
+    position: sticky;
+    z-index: 4;
+    top: 3.75rem;
+
     display: flex;
+
+    margin-bottom: 2rem;
+    padding: 1rem 0;
+
+    background-color: #FFF;
   }
 
-  & > article > header .tags > * + * {
+  & > article > .tags > * + * {
     margin-left: 1rem;
   }
 
