--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -1,6 +1,20 @@
 {% load staticfiles projects_tags participations_tags dashboard_tags %}
 
-<article id="article" class="js-articleDocument" data-group-id={{group.id}}>
+<article id="article" class="-analysis js-articleDocument" data-group-id={{group.id}}>
+  <ul class="tags js-metricsButtons">
+    <li class="app-tag -button -active -public js-participantsButton">
+      <i class="icon" alt="Participantes"></i>
+      <span class="label">{{participation_count}} Participantes</span>
+    </li>
+    <li class="app-tag -button -opinions js-opinionsButton">
+      <i class="icon" alt="Opiniões"></i>
+      <span class="label">{{group.suggestions.count}} Opiniões</span>
+    </li>
+    <li class="app-tag -button -votes js-votesButton">
+      <i class="icon" alt="Votos"></i>
+      <span class="label">{{group|group_votes}} Votos</span>
+    </li>
+  </ul>
   <header>
     <div class="info">
       {% now "Y-m-d" as todays_date %}
@@ -9,20 +23,6 @@
       {% else %}
       <span class="date -inactive">Encerrado em {{group.closing_date|date:'d/m/Y'}}</span>
       {% endif %}
-      <ul class="tags">
-        <li class="app-tag">
-          <img src="{% static 'img/public.svg' %}" alt="Participantes">
-          <span class="label">{{participation_count}} Participantes</span>
-        </li>
-        <li class="app-tag">
-          <img src="{% static 'img/given-opinions.svg' %}" alt="Opiniões">
-          <span class="label">{{group.suggestions.count}} Opiniões</span>
-        </li>
-        <li class="app-tag">
-          <img src="{% static 'img/votes.svg' %}" alt="Votos">
-          <span class="label">{{group|group_votes}} Votos</span>
-        </li>
-      </ul>
     </div>
     <h1 class="js-documentTitle" contentEditable="true">{{ object.title }}</h1>
     <p class="js-documentDescription description">{{ object.description }}</p>
@@ -42,20 +42,33 @@
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         <span class="js-defaultText">...</span>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
-        {% if excerpt|excerpt_participants:group > 0 %}
-        <span class="votes">
-          <span class="value">{{excerpt|excerpt_participants:group}}</span>
-          <span class="bar" style="width: {% get_percent excerpt|excerpt_participants:group participation_count %}%;"></span>
-        </span>
-        {% endif %}
       </p>
       {% else %}
-      <p class="excerpt-wrapper {% excerpt_classes excerpt %} js-excerptWrapper">
+      <p class="excerpt-wrapper -analysis {% excerpt_classes excerpt %} js-excerptWrapper">
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
+        {% get_percent excerpt|excerpt_participants:group participation_count as relevance_participations %}
+        {% get_percent excerpt|excerpt_opinions:group group.suggestions.count as relevance_opinions %}
+        {% get_percent excerpt|excerpt_votes:group group|group_votes as relevance_votes %}
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
-        <span class="votes">
-          <span class="value">{{excerpt|excerpt_participants:group}}</span>
-          <span class="bar" style="width: {% get_percent excerpt|excerpt_participants:group participation_count %}%;"></span>
+        <span class="metrics js-metricsIcons">
+          <span class="item -participants js-participantsIcon" aria-label="{{ relevance_participations }}% de Participantes">
+            <span class="value">{{excerpt|excerpt_participants:group}}</span>
+            <span class="bar">
+              <span class="size" style="width: {{ relevance_participations }}%;"></span>
+            </span>
+          </span>
+          <span class="item -opinions js-opinionsIcon" aria-label="{{ relevance_opinions }}% de Opiniões" style="display: None;">
+            <span class="value">{{excerpt|excerpt_opinions:group}}</span>
+            <span class="bar">
+              <span class="size" style="width: {{ relevance_opinions }}%;"></span>
+            </span>
+          </span>
+          <span class="item -votes js-votesIcon" aria-label="{{ relevance_votes }}% de Votos" style="display: None;">
+            <span class="value">{{excerpt|excerpt_votes:group}}</span>
+            <span class="bar">
+              <span class="size" style="width: {{ relevance_votes }}%;"></span>
+            </span>
+          </span>
         </span>
       </p>
       {% endif %}
