Fix all the things

--- a/src/static/scss/base/_unclassed.scss
+++ b/src/static/scss/base/_unclassed.scss
@@ -276,6 +276,7 @@ button {
   .page-minimap,
   .document-editor > article > header > .info,
   .document-editor > article > header .date,
+  .document-editor > article > .tags,
   .excerpt-wrapper > .votes,
   .save-message {
     display: none !important;
