--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -109,7 +109,7 @@
     content: '';
     pointer-events: none;
 
-    background: linear-gradient(transparent, #FFF);
+    background: linear-gradient(rgba(255,255,255,0), #FFF);
   }
 
   & > h3 {
