--- a/src/templates/components/public-participation-modal.html
+++ b/src/templates/components/public-participation-modal.html
@@ -18,17 +18,18 @@
 <h1 class="js-titleModal">Data de encerramento</h1>
 <p>Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos.</p>
 <ul class="errorlist nonfield js-formError"></ul>
-<div class="input-text -date -required">
+<div class="input-text -required -date">
   {% if group.public_participation %}
-  <input type="date" name="date" class="js-closingDate" required maxlength="200" min="{% now 'Y\-m\-d' %}" value="{{group.closing_date|date:'Y-m-d'}}" id="id_date">
+  <input name="date" class="js-datePicker js-closingDate" required maxlength="200" min="{% now 'Y\-m\-d' %}" value="{{group.closing_date|date:'Y-m-d'}}" id="id_date">
   {% else %}
-  <input type="date" name="date" class="js-closingDate" required maxlength="200" min="{% now 'Y\-m\-d' %}" id="id_date">
+  <input name="date" class="js-datePicker js-closingDate" required maxlength="200" min="{% now 'Y\-m\-d' %}" id="id_date">
   {% endif %}
-  <label for="id_date">Data de encerramento</label>
+  <label for="id_date">Data de encerramento:</label>
 </div>
+
 <div class="input-text -congressman js-congressman -required" data-api-url="{{api_url}}" data-legislature="{{legislature}}">
   <input class="js-inputAutocomplete" type="text" name="title" required id="id_congressman">
-  <label for="id_congressman">Deputado responsavel</label>
+  <label for="id_congressman">Deputado responsavel:</label>
 </div>
 <div class="input-select -required">
   <div class="select">
