Fix all the things (#172)

--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -20,9 +20,9 @@
     <span class="title js-documentTitle">{{ object.document.title }}</span>
     <ul class="breadcrumb-menu">
       {% if object %}
-        <a href="#">Editar Grupo Fechado</a>
+        <a href="#">Editar Participação Restrita</a>
       {% else %}
-        <a href="#">Criar Grupo Fechado</a>
+        <a href="#">Criar Participação Restrita</a>
       {% endif %}
     </ul>
   </div>
@@ -36,9 +36,9 @@
 <main class="section-group">
   <header>
     {% if object %}
-    <h2>Editar Grupo Fechado</h2>
+    <h2>Editar Participação Restrita</h2>
     {% else %}
-    <h2>Criar Grupo Fechado</h2>
+    <h2>Criar Participação Restrita</h2>
     {% endif %}
 
     <a onclick="window.history.back();" class="link-back">Voltar</a>
@@ -112,7 +112,7 @@
       </div>
     </div>
 
-    <h2>Gerenciar Perfis do Grupo</h2>
+    <h2>Gerenciar Participantes</h2>
 
     <div class="input-filter js-openParticipation">
       <div class="input">
