--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -103,7 +103,7 @@
               {% if not object.title or not object.description or not object.themes.all %}
               <a href="#" class="-add js-openValidationButton">Adicionar</a>
               {% else %}
-              <a href="{% url 'new_group' object.id %}" class="-add">Adicionar</a>
+              <a href="{% url 'new_group' object.id %}?previous_page={{ request.get_full_path }}" class="-add">Adicionar</a>
               {% endif %}
             </div>
             <!-- Criar nova -->
