--- a/src/templates/components/opinions-sidebar.html
+++ b/src/templates/components/opinions-sidebar.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<aside class="side-bar">
+<aside class="side-bar js-sideBar">
   <div class="header">
     <h3>Opiniões mais votadas</h3>
   </div>
