--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -176,6 +176,7 @@
 <script src="{% static 'jquery-ui-dist/jquery-ui.min.js' %}"></script>
 <script src="{% static 'air-datepicker/dist/js/datepicker.min.js' %}"></script>
 <script src="{% static 'air-datepicker/dist/js/i18n/datepicker.pt-BR.js' %}"></script>
+<script src="{% static 'truncate.js/dist/truncate.min.js' %}"></script>
 <script src="{% static 'js/components/datePicker/view.js' %}"></script>
 <script src="{% static 'js/components/documentSideBar/view.js' %}"></script>
 <script src="{% static 'js/components/validationModal/view.js' %}"></script>
