--- a/src/static/scss/components/_excerpt-wrapper.scss
+++ b/src/static/scss/components/_excerpt-wrapper.scss
@@ -19,6 +19,10 @@
     font-style: italic;
   }
 
+  &.-enabled {
+    opacity: 1 !important;
+  }
+
   & > .metrics {
     position: absolute;
     z-index: 3;
