--- a/src/templates/pages/new-document.html
+++ b/src/templates/pages/new-document.html
@@ -10,7 +10,7 @@
     <h2>Criar Novo Documento</h2>
     {% endif %}
 
-    <a onclick="window.history.back();" class="link-back">Voltar</a>
+    <a href="{{ previous_page }}" class="link-back">Voltar</a>
 
   </header>
 
