--- a/src/templates/components/participation-info-modal.html
+++ b/src/templates/components/participation-info-modal.html
@@ -10,6 +10,6 @@
 
 {% block content %}
 <h1>Quase lá 😉</h1>
-<p>O wikilegis precisa de um prazo de até 2 dias úteis...</p>
+<p>Enviamos uma solicitação para o deputado confirmar a abertura pública do projeto. Pedimos um prazo de até 2 dias úteis para te dar uma resposta.</p>
 <button class="app-button -green js-close">Fechar</button>
 {% endblock content %}
