--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -1,6 +1,6 @@
 {% load staticfiles projects_tags participations_tags dashboard_tags %}
 
-<article id="article" class="-analysis js-articleDocument" data-group-id={{group.id}}>
+<article id="article" class="js-articleDocument" data-group-id={{group.id}}>
   <ul class="tags js-metricsButtons">
     <li class="app-tag -button -active -public js-participantsButton">
       <i class="icon" alt="Participantes"></i>
