--- a/src/static/scss/components/_tool-bar.scss
+++ b/src/static/scss/components/_tool-bar.scss
@@ -36,18 +36,11 @@
     width: 100%;
     height: 4.5rem;
 
-    @include hovering-label(left, 2em, $color-whitesmoke, .875rem);
+    @include hovering-label(left, 'default', 1rem, $color-whitesmoke, .875rem);
 
     &:hover > svg path {
       fill: $color-deep-gray;
     }
-  }
-
-  & > .tools > .icon::after {
-    background-color: $color-deep-gray;
-    padding: 0.75em 1em;
-    border-radius: 0.25rem;
-    margin-right: 1em;
   }
 
   & > .tools > .icon.-active > svg path {
